ナベアツ課題

--- a/nabeatsu.html
+++ b/nabeatsu.html
@@ -7,6 +7,7 @@
 <h1>ナベアツ課題</h1>
 <p>課題を提出します</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RGDDk9CugFU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<p>今回はgitでハマりました…</p>
 <footer></footer>   
 <script type="text/javascript" src="nabeatsu-script.js"></script>
 </body>
